--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: 'PR Auto Update'
+name: 'PR Up to Date'
 description: 'Check if branches are up to date and merge the base branch into the pull request branch if necessary.'
 
 inputs:
